- corrects exposure of .show-cart-listing on rhs overflow of .listing-container; - addresses .show-cart-listing property changes while scrolling and resizing window to "mask" the "teleportatio" previously apparent; - corrects NaN result from inputing nothing (blank) as Update Cart value - now ignores a blank and resets value to current quantity in cart;
 On branch master
 Changes to be committed:
	modified:   css/product-listing-page-v5.css
	modified:   scripts/scroll-then-fix.js
	modified:   scripts/shopping.js

--- a/css/product-listing-page-v5.css
+++ b/css/product-listing-page-v5.css
@@ -22,6 +22,14 @@ body * {
   overflow: auto;
   transition: 0.35s all ease;
 }
+.fadeOut {
+  opacity: 0;
+  /*transition: opacity 0.125s;*/
+}
+.fadeIn {
+  opacity: 1;
+  /*transition: opacity 0.125s;*/
+}
 
 .hide {
   display: none;
@@ -50,6 +58,9 @@ body * {
   position: relative;
   margin: 0;
   padding: 0;
+  /* keeps purposely hidden rhs of .show-cart-listing from
+      being viewable past rhs of .listing-container */
+  overflow-x: hidden;
 }
 
 .listing-container h2 {
@@ -68,7 +79,8 @@ body * {
   font-size: 2.5rem;
   width: auto; /* this works since position: fixed/absolute; collapses to content */
   border-radius: 2px;
-  transition: 0.25s all ease;
+  /* only apply transitions to properties we want to change as such */
+  transition: right 0.25s, padding 0.25s;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),
               0 2px 10px 0 rgba(0,0,0,0.12);
 }
